2013-01-03  Esa Peuha  <esa.peuha@gmail.com>

	* games/spider.c (key): Call clear_arrows before stack_undo.
	* lib/make-imglib.c (main): Print file name instead of null file
	pointer if fopen fails.

2012-03-24  DJ Delorie  <dj@delorie.com>

	* configure.in : ACE 1.4 release
	* configure: regenerated.

2012-03-24  Jari Aalto <jari.aalto@cante.net>

	* Debian mega-patch

2008-04-19  Eric Bachalo  <ebachalo@redhat.com>

	* games/spider.c: Implementation of solitaire game of spider.
	* games/spider.html: Help for solitaire game of spider.
	* games/spider.png: Splash screen for solitaire game of spider.
	* games/Makefile.am: Added Spider build info. 
	* desktop/spider.desktop: Solitaire desktop file.
	* Makefile.in: regenerated (in fedora 8)
	* aclocal.m4: regenerated (in fedora 8)
	* configure: regenerated (in fedora 8)
	* games/Makefile.in: regenerated (in fedora 8)
	* lib/Makefile.in: regenerated (in fedora 8)
	* tests/Makefile.in: regenerated (in fedora 8)

2004-06-13  Thimo Neubauer  <thimo@riff.netz>

	* games/thornq.c: Applied patch from Seneca Cunningham so that
	double clicking on facedown cards doesn't move them like faceup
	cards

2003-02-11  Thimo Neubauer  <thimo@debian.org>

	* games/mastermind.c (key): Don't use 'r' for restart,
	as it's needed for "red".

2002-08-30  Thimo Neubauer  <thimo@debian.org>

        * games/solitaire.c: abort dragging if another button is clicked
	
2002-04-19  Thimo Neubauer  <thimo@debian.org>

	* lib/xwin.c (xwin_init): Check for no DISPLAY.
	* lib/xwin.h (xwin_init): Return int.
	* lib/table.c (init_ace): Return if no DISPLAY.

2002-04-19  DJ Delorie  <dj@delorie.com>

	* games/solitaire.c (double_click): Don't move cards twice
	from the same stack.

2001-12-07  DJ Delorie  <dj@redhat.com>

	* games/solitaire.c (double_click): Prefer moving to a maincell
	over moving to an outcell.

2001-09-21  DJ Delorie  <dj@delorie.com>

	* lib/cards.h (register_imagelib): Declare.
	(appimglib_imagelib): Declare.